# Python_mods

00/ex2/: ft_plot_area.py
00/ex3/: ft_harvest_total.py
00/ex5/: ft_water_reminder.py
00/ex6/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
00/ex7/: ft_seed_inventory.py
01/ex0/: ft_garden_intro.py
01/ex1/: ft_garden_data.py
01/ex2/: ft_plant_growth.py
01/ex3/: ft_plant_factory.py
01/ex4/: ft_garden_security.py
01/ex5/: ft_plant_types.py
01/ex6/: ft_garden_analytics.py
02/ex0/: ft_first_exception.py
02/ex1/: ft_raise_exception.py
02/ex2/: ft_different_errors.py
02/ex3/: ft_custom_errors.py
02/ex4/: ft_finally_block.py
03/ex0/: ft_command_quest.py
03/ex1/: ft_score_analytics.py
03/ex2/: ft_coordinate_system.py
03/ex3/: ft_achievement_tracker.py
03/ex4/: ft_inventory_system.py
03/ex5/: ft_data_stream.py
03/ex6/: ft_data_alchemist.py
04/ex0/: ft_ancient_text.py
04/ex1/: ft_archive_creation.py
04/ex2/: ft_stream_management.py
04/ex3/: ft_vault_security.py  test.txt
05/ex0/: data_processor.py
05/ex1/: data_stream.py
05/ex2/: data_pipeline.py
06/: elements.py  ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
06/alchemy/: __init__.py  potions.py
07/: battle.py  capacitor.py  tournament.py
07/ex0/: __init__.py  class_name.py  factory.py
08/ex1/: loading.py  pyproject.toml
ex0/: ft_hello_garden.py
(+25 files in other folders)
