[tool.poetry]
name = "matrix-loading"
version = "1.0.0"
description = "Matrix data analysis program"
authors = ["loutcho69"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = ">=2.1.0"
numpy = ">=1.25.0"
matplotlib = ">=3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"